--- a/main/CanvasManifest.json
+++ b/main/CanvasManifest.json
@@ -1,8 +1,8 @@
 {
   "FormatVersion": "0.24",
   "Header": {
-    "DocVersion": "1.324",
-    "MinVersionToLoad": "1.324",
+    "DocVersion": "1.326",
+    "MinVersionToLoad": "1.326",
     "MSAppStructureVersion": "2.0"
   },
   "Properties": {
@@ -55,7 +55,7 @@
       "keeprecentscreensloaded": false,
       "longlivingcache": false,
       "nativecdsexperimental": true,
-      "optimizedforteamsmeeting": false,
+      "optimizedforteamsmeeting": true,
       "parallelcodegen": false,
       "projectionmapping": true,
       "reactformulabar": false,
